--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "@nuxt/icon": "^2.0.0",
+    "@pinia/nuxt": "^0.11.2",
+    "@tailwindcss/vite": "^4.1.13",
     "nuxt": "^4.1.2",
+    "pinia": "^3.0.3",
+    "tailwindcss": "^4.1.13",
+    "uuid": "^13.0.0",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   }
