--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "uuid": "^13.0.0",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@iconify-json/ic": "^1.2.4",
+    "@iconify-json/material-symbols": "^1.2.39"
   }
 }
