--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@iconify-json/ic": "^1.2.4",
-    "@iconify-json/material-symbols": "^1.2.39"
+    "@iconify-json/material-symbols": "^1.2.39",
+    "@iconify-json/mdi": "^1.2.3"
   }
 }
