--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/icon": "^2.0.0",
+    "@nuxt/ui": "^4.0.1",
     "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.13",
     "nuxt": "^4.1.2",
